[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
halo2-base = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom", "test-utils"] }
halo2-ecc = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom"] }
plume-halo2 = { git = "https://github.com/shreyas-londhe/zk-nullifier-sig.git", branch = "feat/plume-halo2" }
pse-poseidon = { git = "https://github.com/aerius-labs/pse-poseidon.git", branch = "feat/stateless-hash" }

[target.'cfg(target_family = "wasm")'.dependencies]
halo2-wasm = { git = "https://github.com/shreyas-londhe/halo2-browser.git", branch = "feat/wasm-instance", default-features = false }
wasm-bindgen = "0.2.87"
serde = {version = "1.0.197" ,features = ["derive"] }
tsify = "0.4.5"
num-bigint = "0.4.4"
num-traits = "0.2.19"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(target_family = "wasm")'.features]
default=["rayon"]
rayon=["halo2-wasm/rayon"]
